apps/10-home/homeassistant/overlays/prod/anti-affinity-frigate.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
spec:
  template:
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: frigate
                topologyKey: kubernetes.io/hostname
