apps/10-home/homeassistant/overlays/prod/rclone-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
spec:
  template:
    spec:
      containers:
        - name: config-syncer
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          args:
            - |
              [...]
