apps/10-home/homeassistant/overlays/prod/service-coiot-lb-patch.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-coiot-lb
  namespace: homeassistant
  annotations:
    io.cilium/lb-ipam-ips: "192.168.201.72"
spec:
  loadBalancerIP: 192.168.201.72
