apps/10-home/homeassistant/overlays/prod/ingress.yaml
---
# HTTP -> HTTPS redirect
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-http-redirect
  namespace: homeassistant
  labels:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd
    external-dns.alpha.kubernetes.io/target: truxonline.com
    vixens.io/nossoneeded: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: homeassistant.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant-svc
                port:
                  number: 8123
---
# HTTPS with TLS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  namespace: homeassistant
  labels:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/target: truxonline.com
    external-dns.alpha.kubernetes.io/public: "true"
    vixens.io/nossoneeded: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: homeassistant.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant-svc
                port:
                  number: 8123
  tls:
    - hosts:
        - homeassistant.truxonline.com
      secretName: homeassistant-tls-prod
